[package]
name        = "mcpcrawler"
version     = "0.1.0"
edition     = "2024"

[dependencies]
tokio       = {version = "1", features = ["full"]}
reqwest     = {version = "0.12", features = ["rustls-tls"]}
scraper     = "0.22"
url         = "2"
rmcp        = {version = "0.1", features = ["server"]}
serde       = {version = "1", features = ["derive"]}
serde_json  = "1"
futures     = "0.3"